fix: useCallback fn deps fixed feat: word wrapping when editing long text strings

--- a/src/styles/rte.css
+++ b/src/styles/rte.css
@@ -7,6 +7,9 @@
     outline: none;
     width: 100%;
     height: 100%;
+    white-space: normal;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 .ql-editor a {
